Fix: Store Logo not showing in cart after adding a product from search modal

--- a/src/components/CartPopUp/CartPopUp.css
+++ b/src/components/CartPopUp/CartPopUp.css
@@ -4,7 +4,7 @@
   position: fixed;
   align-items: flex-start;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   display: flex;
   right: 0;
   top: 100%;
